0.7.4 - currently working on
- [#4094] Fix: Use empty configurations in the unit tests
- [#4080] Fix: Memory-only models must not try to load IRRE relations from database

0.7.3 - released 2010-08-13
- [#2049] Cleanup: Drop our copy of t3lib_div::rmdir
- [#3957] Change: tx_oelib_MapperRegistry should use class_exists() with autoload = TRUE instead of calling our own autoloader
- [#3927] Fix: Message in system log: Unable to autoload class "pear"

0.7.2 - released 2010-05-29
- [#3871] Change: getTemplate should be protected
- [#3860] Fix: grlist for FE user of fake FE should be 0,-1 when no user is logged in
- [#3434] Cleanup: Replace false/true with FALSE/TRUE

0.7.1 - released 2010-04-01
- [#3736] Fix: DB warnings in the EM
- [#3801] Fix: The FE user mapper must not use the user data from TSFE->fe_user->user
- [#3782] Fix: Typo in tca.php
- [#3065] Change: Use the new getters/setters when using the configuration proxy
- [#3768] Fix: Relations to FE user groups with the UID 0 should be ignored
- [#3741] Fix: PID in page type error message displayed as "Array"
- [#3710] Change: Use self:: for static calls within the same class
- [#3734] Fix: List::getUids and ::hasUid need to react to changes
- [#3729] Change: Provide ext_autoload for our extensions

0.7.0 - released 2010-02-23
- [#3701] Feature: Add Model::markAsVisible and ::markAsHidden
- [#3679] Change: Update all PEAR and emogrifier classes to the latest versions
- [#3650] Fix: Objects overwrite/delete each other's configuration arrays
- [#3677] Fix: Return-path in e-mails has additional <> around it when forceReturnPath is used
- [#3670] Fix: PEAR classes can get included twice
- [#3673] Fix: Model::existsKey returns false for null data
- [#3556] Fix: Use PATH_tslib in require once for tslib_content
- [#3550] Fix: getUid should return an integer, not a string
- [#3659] Fix: getSubpart('foo') fails for certain characters within the subpart delimiters